added simple responsiveness

--- a/index.html
+++ b/index.html
@@ -148,8 +148,7 @@
                     <div class="section-heading">
                         <h3>INFO</h3>
                         <h2 class="section-title">Our Three Simple Steps</h2>
-                        <p class="section-subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam!</p>
+                        <p class="section-subtitle">At Kotties Cleaning we have three simple steps to a cleaner space. Book in under 60 seconds, enjoy professional cleaning, and relax in your refreshed environment.</p>
                     </div>
 
                 </div>
@@ -179,7 +178,7 @@
                         <!--Icon Block Description-->
                         <div class="icon-block-description">
                             <h4>Clean</h4>
-                            <p>One of our proffesional cleaners will come and extensively clean your home or office.</p>
+                            <p>An extensive clean of your home or office.</p>
                         </div>
                     </div>
                     <!--End of Icon Block-->
@@ -257,7 +256,7 @@
                 </div>
                 <!--End Content Right Side-->
 
-                <div class="col-3">
+                <div class="col-3 phone-dissapear">
                     <img src="images/mop.svg" alt="Mop"/>
                 </div>
 
@@ -321,15 +320,13 @@
                         <h3>Aged Care / Disability</h3>
                         <p class="pricing-sub">Always Proffesional</p>
                         <div class="pricing">
-                            <div class="price"><span>$</span>19</div>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+                            <div class="price"><span>$</span>102</div>
+                            <p>Compassionately tailored cleaning for seniors and disabilities.</p>
                         </div>
                         <ul>
-                            <li>Ongoing</li>
-                            <li>Stress Free</li>
-                            <li>Chore</li>
-                            <li>Forum Support</li>
-                            <li>1 year free updates</li>
+                            <li>Specialized Care</li>
+                            <li>Compassionate Cleaning</li>
+                            <li>Seniors' Support</li>
                         </ul>
                         <a href="#" class="button">CALL TODAY</a>
                     </div>
@@ -342,8 +339,8 @@
                         <h3>Weekly or Fortnightly</h3>
                         <p class="pricing-sub">The popular choice</p>
                         <div class="pricing">
-                            <div class="price"><span>$</span>29</div>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+                            <div class="price"><span>$</span>73</div>
+                            <p>Regular cleaning to maintain your space.</p>
                         </div>
                         <ul>
                             <li>On Going</li>
@@ -361,15 +358,13 @@
                         <h3>Move Out / Spring Clean</h3>
                         <p class="pricing-sub">The one off</p>
                         <div class="pricing">
-                            <div class="price"><span>$</span>49</div>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+                            <div class="price"><span>$</span>250</div>
+                            <p>Deep cleaning to refresh your home.</p>
                         </div>
                         <ul>
-                            <li>Unlimited Downloads</li>
-                            <li>Unlimited Extensions</li>
-                            <li>HD Video Tutorials</li>
-                            <li>Chat Support</li>
-                            <li>Lifetime free updates</li>
+                            <li>Deep Refresh</li>
+                            <li>Seasonal Revival</li>
+                            <li>Thorough Clean</li>
                         </ul>
                         <a href="#" class="button">CALL TODAY</a>
                     </div>
