--- a/index.html
+++ b/index.html
@@ -74,12 +74,12 @@
                         <!--Social Icons in Header-->
                         <ul class="social-icons">
                             <li>
-                                <a target="_blank" title="Facebook" href="https://www.facebook.com/username">
+                                <a target="_blank" title="Facebook" href="#">
                                     <i class="fa fa-facebook fa-1x"></i><span>Facebook</span>
                                 </a>
                             </li>
                             <li>
-                                <a target="_blank" title="Instagram" href="http://www.instagram.com/username">
+                                <a target="_blank" title="Instagram" href="#">
                                     <i class="fa fa-instagram fa-1x"></i><span>Instagram</span>
                                 </a>
                             </li>
@@ -178,7 +178,7 @@
                         <!--Icon Block Description-->
                         <div class="icon-block-description">
                             <h4>Clean</h4>
-                            <p>An extensive clean of your home or office.</p>
+                            <p>An xtensive clean of your home or office.</p>
                         </div>
                     </div>
                     <!--End of Icon Block-->
@@ -388,17 +388,17 @@
             <!--Social Icons in Footer-->
             <ul class="col-2 social-icons">
                 <li>
-                    <a target="_blank" title="Facebook" href="https://www.facebook.com/username">
+                    <a target="_blank" title="Facebook" href="#">
                         <i class="fa fa-facebook fa-1x"></i><span>Facebook</span>
                     </a>
                 </li>
                 <li>
-                    <a target="_blank" title="Twitter" href="http://www.twitter.com/username">
+                    <a target="_blank" title="Twitter" href="#">
                         <i class="fa fa-twitter fa-1x"></i><span>Twitter</span>
                     </a>
                 </li>
                 <li>
-                    <a target="_blank" title="Instagram" href="http://www.instagram.com/username">
+                    <a target="_blank" title="Instagram" href="#">
                         <i class="fa fa-instagram fa-1x"></i><span>Instagram</span>
                     </a>
                 </li>
