--- a/index.html
+++ b/index.html
@@ -308,79 +308,6 @@
         </aside>
         <!--End of Testimonials-->
 
-        <div class="faq-container text-center">
-            <div class="section-heading">
-                <h3>GET ANSWERS</h3>
-                <h2 class="section-title">Frequently Asked Questions</h2>
-            </div>
-            <div class="accordion">
-            <div class="accordion-item">
-                <div class="accordion-item-header">
-                How do I book your cleaning services?
-                </div>
-                <div class="accordion-item-body">
-                <div class="accordion-item-body-content">
-                    Booking our services is easy! Simply visit our website and click on the "Book Now" button. Follow the prompts to select your service type, preferred date and time, and provide your contact information. It takes less than a minute to secure your appointment.
-                </div>
-                </div>
-            </div>
-            <div class="accordion-item">
-                <div class="accordion-item-header">
-                    What happens if I need to reschedule or cancel my appointment?
-                </div>
-                <div class="accordion-item-body">
-                <div class="accordion-item-body-content">
-                    We understand that plans can change. If you need to reschedule or cancel your appointment, please notify us at least 48 hours in advance, and we'll be happy to accommodate your request. However, cancellations made within 48 hours of the scheduled appointment may incur a fee. Your satisfaction is our priority, and we strive to be flexible and accommodating to your needs.
-                </div>
-                </div>
-            </div>
-            <div class="accordion-item">
-                <div class="accordion-item-header">
-                    Are your cleaning professionals trained and insured?
-                </div>
-                <div class="accordion-item-body">
-                <div class="accordion-item-body-content">
-                    Yes, all our cleaning professionals are highly trained and fully insured for your peace of mind. We prioritize the safety and security of both our clients and our team members.
-                    <!--
-                    <ul style="padding-left: 1rem;">
-                    <li>HTML, CSS, JavaScript</li>
-                    <li>Frameworks (CSS and JavaScript frameworks)</li>
-                    <li>Responsive Design</li>
-                    <li>Version Control/Git</li>
-                    <li>Testing/Debugging</li>
-                    <li>Browser Developer Tools</li>
-                    <li>Web Performance</li>
-                    <li>SEO (Search Engine Optimization)</li>
-                    <li>Command Line</li>
-                    <li>CMS (Content Management System)</li>
-                    </ul>
-                    -->
-                </div>
-                </div>
-            </div>
-            <div class="accordion-item">
-                <div class="accordion-item-header">
-                    What should I expect during a spring cleaning service?
-                </div>
-                <div class="accordion-item-body">
-                <div class="accordion-item-body-content">
-                    Our spring cleaning service is a comprehensive, top-to-bottom deep clean of your space. We focus on areas that may not receive regular attention, such as baseboards, ceiling fans, and behind appliances. It's designed to refresh and revitalize your home, leaving it spotless and rejuvenated.
-                </div>
-                </div>
-            </div>
-            <div class="accordion-item">
-                <div class="accordion-item-header">
-                    Can I choose the cleaning products you use?
-                </div>
-                <div class="accordion-item-body">
-                <div class="accordion-item-body-content">
-                    Absolutely! We understand that some clients have specific preferences or sensitivities. During the booking process, you can specify any particular cleaning products or brands you'd like us to use, and we'll do our best to accommodate your requests.
-                </div>
-                </div>
-            </div>
-            </div>
-          </div>
-
         <!--Pricing Tables-->
         <section id="pricing" class="secondary-color text-center scrollto clearfix ">
             <div class="row clearfix">
@@ -455,11 +382,88 @@
     <!--End Main Content Area-->
 
 
+    <!-- FAQs -->
+    <div class="faq-container text-center">
+        <div class="section-heading">
+            <h3>GET ANSWERS</h3>
+            <h2 class="section-title">Frequently Asked Questions</h2>
+        </div>
+        <div class="accordion">
+        <div class="accordion-item">
+            <div class="accordion-item-header">
+            How do I book your cleaning services?
+            </div>
+            <div class="accordion-item-body">
+            <div class="accordion-item-body-content">
+                Booking our services is easy! Simply visit our website and click on the "Book Now" button. Follow the prompts to select your service type, preferred date and time, and provide your contact information. It takes less than a minute to secure your appointment.
+            </div>
+            </div>
+        </div>
+        <div class="accordion-item">
+            <div class="accordion-item-header">
+                What happens if I need to reschedule or cancel my appointment?
+            </div>
+            <div class="accordion-item-body">
+            <div class="accordion-item-body-content">
+                We understand that plans can change. If you need to reschedule or cancel your appointment, please notify us at least 48 hours in advance, and we'll be happy to accommodate your request. However, cancellations made within 48 hours of the scheduled appointment may incur a fee. Your satisfaction is our priority, and we strive to be flexible and accommodating to your needs.
+            </div>
+            </div>
+        </div>
+        <div class="accordion-item">
+            <div class="accordion-item-header">
+                Are your cleaning professionals trained and insured?
+            </div>
+            <div class="accordion-item-body">
+            <div class="accordion-item-body-content">
+                Yes, all our cleaning professionals are highly trained and fully insured for your peace of mind. We prioritize the safety and security of both our clients and our team members.
+                <!--
+                <ul style="padding-left: 1rem;">
+                <li>HTML, CSS, JavaScript</li>
+                <li>Frameworks (CSS and JavaScript frameworks)</li>
+                <li>Responsive Design</li>
+                <li>Version Control/Git</li>
+                <li>Testing/Debugging</li>
+                <li>Browser Developer Tools</li>
+                <li>Web Performance</li>
+                <li>SEO (Search Engine Optimization)</li>
+                <li>Command Line</li>
+                <li>CMS (Content Management System)</li>
+                </ul>
+                -->
+            </div>
+            </div>
+        </div>
+        <div class="accordion-item">
+            <div class="accordion-item-header">
+                What should I expect during a spring cleaning service?
+            </div>
+            <div class="accordion-item-body">
+            <div class="accordion-item-body-content">
+                Our spring cleaning service is a comprehensive, top-to-bottom deep clean of your space. We focus on areas that may not receive regular attention, such as baseboards, ceiling fans, and behind appliances. It's designed to refresh and revitalize your home, leaving it spotless and rejuvenated.
+            </div>
+            </div>
+        </div>
+        <div class="accordion-item">
+            <div class="accordion-item-header">
+                Can I choose the cleaning products you use?
+            </div>
+            <div class="accordion-item-body">
+            <div class="accordion-item-body-content">
+                Absolutely! We understand that some clients have specific preferences or sensitivities. During the booking process, you can specify any particular cleaning products or brands you'd like us to use, and we'll do our best to accommodate your requests.
+            </div>
+            </div>
+        </div>
+        </div>
+    </div>
+    <!-- End of FAQs Area -->
+
+
+
     <!--Footer-->
     <footer id="landing-footer" class="clearfix">
         <div class="row clearfix">
 
-            <p id="copyright" class="col-2">&#169 Kotties Cleaning 2023 &nbsp; - &nbsp; Made by<a href="https://www.shapingrain.com"> Peter Y</a> &nbsp; - &nbsp; Activity Vectors by <a href="https://www.vecteezy.com/free-vector/activity">Vecteezy</a></p>
+            <p id="copyright" class="col-2">&#169 Kotties Cleaning 2023 &nbsp; - &nbsp; Made by<a href="#"> Peter Y</a> &nbsp; - &nbsp; Activity Vectors by <a href="https://www.vecteezy.com/free-vector/activity">Vecteezy</a></p>
 
             <!--Social Icons in Footer-->
             <ul class="col-2 social-icons">
