--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head lang="en">
     <meta charset="UTF-8">
 
+    <!-- https://unsplash.com/license -->
+
     <!--Page Title-->
     <title>Kottie's Cleaning</title>
 
@@ -62,11 +64,11 @@
                     <div id="logo">
 
                         <!--Logo that is shown on the banner-->
-                        <img src="images/logo_idea_1.png" id="banner-logo" alt="Landing Page"/>
+                        <img src="images/logos/logo_idea_5.png" id="banner-logo" alt="Landing Page"/>
                         <!--End of Banner Logo-->
 
                         <!--The Logo that is shown on the sticky Navigation Bar-->
-                        <img src="images/logo_idea_1.png" id="navigation-logo" alt="Landing Page"/>
+                        <img src="images/logos/logo_idea_5.png" id="navigation-logo" alt="Landing Page"/>
                         <!--End of Navigation Logo-->
 
                     </div>
@@ -127,7 +129,7 @@
 
                 <div class="section-heading">
                     <h1>KOTTIES CLEANING</h1>
-                    <h2>Elevating North Shore homes with impeccable cleaning services.</h2>
+                    <h2>Elevating Sydney homes with impeccable cleaning services.</h2>
                 </div>
 
                 <!--Call to Action-->
@@ -181,7 +183,7 @@
                         <!--Icon Block Description-->
                         <div class="icon-block-description">
                             <h4>Clean</h4>
-                            <p>An xtensive clean of your home or office.</p>
+                            <p>An extensive clean of your home or office.</p>
                         </div>
                     </div>
                     <!--End of Icon Block-->
@@ -232,7 +234,7 @@
                 <div class="col-3">
                     <!--User Testimonial-->
                     <blockquote class="testimonial text-right bigtest">
-                        <q>Kotties Cleaning has been a game-changer for me as a busy homeowner on the North Shore.</q>
+                        <q>Kotties Cleaning has been a game-changer for me as a busy homeowner in Sydney.</q>
                         <footer>— John Doe, Happy Customer</footer>
                     </blockquote>
                     <!-- End of Testimonial-->
@@ -245,12 +247,12 @@
                     <div class="section-heading">
                         <h3>ABOUT US</h3>
                         <h2 class="section-title">Focusing On What Matters Most</h2>
-                        <p class="section-subtitle">At Kotties Cleaning, we're the North Shore's trusted choice for residential cleaning. Our experienced team is dedicated to transforming your living space into a haven of cleanliness and comfort. We understand the unique needs of North Shore homeowners and deliver tailored cleaning solutions that go beyond the ordinary.</p>
+                        <p class="section-subtitle">At Kotties Cleaning, we're the Sydney's trusted choice for residential cleaning. Our experienced team is dedicated to transforming your living space into a haven of cleanliness and comfort. We understand the unique needs of Northern Beaches homeowners and deliver tailored cleaning solutions that go beyond the ordinary.</p>
                     </div>
-                    <p>What sets us apart is our unwavering attention to detail. We use eco-friendly products and advanced techniques to ensure thorough yet gentle cleaning. Each visit from our team is a step toward maintaining your home's beauty and hygiene, allowing you to enjoy your North Shore lifestyle without the cleaning hassle.
+                    <p>What sets us apart is our unwavering attention to detail. We use eco-friendly products and advanced techniques to ensure thorough yet gentle cleaning. Each visit from our team is a step toward maintaining your home's beauty and hygiene, allowing you to enjoy your Sydney lifestyle without the cleaning hassle.
                     </p>
                     <p>
-                        Choose Kotties Cleaning for peace of mind. We're licensed, insured, and focused on North Shore excellence. Our punctuality, efficiency, and eco-friendly practices are second to none. Your satisfaction is our priority, and we're here to make your North Shore home cleaner and more vibrant.
+                        Choose Kotties Cleaning for peace of mind. We're licensed, insured, and focused on North Shore excellence. Our punctuality, efficiency, and eco-friendly practices are second to none. Your satisfaction is our priority, and we're here to make your home cleaner and more vibrant.
                     </p>
                     <!-- Just replace the Video ID "UYJ5IjBRlW8" with the ID of your video on YouTube (Found within the URL) -->
                     <a href="#" data-videoid="UYJ5IjBRlW8" data-videosite="youtube" class="button video link-lightbox">
@@ -282,7 +284,7 @@
                 <!--User Testimonial-->
                 <blockquote class="col-3 testimonial classic">
                     <img src="images/user-images/user-1.jpg" alt="User"/>
-                    <q>Kotties Cleaning has been a game-changer for me as a busy homeowner on the North Shore. Their attention to detail is unmatched, and every time they clean, it feels like I'm coming back to a brand new home. I highly recommend their services!</q>
+                    <q>Kotties Cleaning has been a game-changer for me as a busy homeowner on the Upper North Shore. Their attention to detail is unmatched, and every time they clean, it feels like I'm coming back to a brand new home. I highly recommend their services!</q>
                     <footer>John Doe - Happy Customer</footer>
                 </blockquote>
                 <!-- End of Testimonial-->
@@ -290,7 +292,7 @@
                 <!--User Testimonial-->
                 <blockquote class="col-3 testimonial classic">
                     <img src="images/user-images/user-2.jpg" alt="User"/>
-                    <q>I've tried several cleaning services in the North Shore, but Kotties Cleaning stands out. They're not just about cleaning; they're about transforming your living space. It's incredible how they consistently exceed my expectations. My home has never looked better!</q>
+                    <q>I've tried several cleaning services in the area, but Kotties Cleaning stands out. They're not just about cleaning; they're about transforming your living space. It's incredible how they consistently exceed my expectations. My home has never looked better!</q>
                     <footer>Roslyn Doe - Happy Customer</footer>
                 </blockquote>
                 <!-- End of Testimonial-->
@@ -298,7 +300,7 @@
                 <!--User Testimonial-->
                 <blockquote class="col-3 testimonial classic">
                     <img src="images/user-images/user-3.jpg" alt="User"/>
-                    <q>Kotties Cleaning is the go-to choice for homeowners in the North Shore. Their team is professional, friendly, and their work is outstanding. They pay attention to even the smallest details, and it's evident in the sparkling results. I couldn't be happier with their service.</q>
+                    <q>Kotties Cleaning is the go-to choice for homeowners. Their team is professional, friendly, and their work is outstanding. They pay attention to even the smallest details, and it's evident in the sparkling results. I couldn't be happier with their service.</q>
                     <footer>Thomas Doe - Happy Customer</footer>
                 </blockquote>
                 <!-- End of Testimonial-->
@@ -463,7 +465,7 @@
     <footer id="landing-footer" class="clearfix">
         <div class="row clearfix">
 
-            <p id="copyright" class="col-2">&#169 Kotties Cleaning 2023 &nbsp; - &nbsp; Made by<a href="#"> Peter Y</a> &nbsp; - &nbsp; Activity Vectors by <a href="https://www.vecteezy.com/free-vector/activity">Vecteezy</a></p>
+            <p id="copyright" class="col-2">&#169 Kotties Cleaning 2023 &nbsp; - &nbsp; Made by <a href="https://shapingrain.com/">Shaping Rain</a> / <a href="#">Peter Y</a> &nbsp; - &nbsp; Activity Vectors by <a href="https://www.vecteezy.com/free-vector/activity">Vecteezy</a></p>
 
             <!--Social Icons in Footer-->
             <ul class="col-2 social-icons">
@@ -503,7 +505,11 @@
 <script src="js/images-loaded.min.js"></script>
 <script src="js/lightbox.min.js"></script>
 <script src="js/site.js"></script>
-
+<script>
+    window.onload = function () {
+        window.scrollTo(0, 0);
+    };
+</script>
 
 </body>
 </html>
