background graphics + prices

--- a/index.html
+++ b/index.html
@@ -253,6 +253,11 @@
                     </p>
                     <p>
                         Choose Kotties Cleaning for peace of mind. We're licensed, insured, and focused on North Shore excellence. Our punctuality, efficiency, and eco-friendly practices are second to none. Your satisfaction is our priority, and we're here to make your home cleaner and more vibrant.
+                    <br>
+                    &nbsp;
+                    <br>
+                    &nbsp;
+                    <br>
                     </p>
                     <!-- Just replace the Video ID "UYJ5IjBRlW8" with the ID of your video on YouTube (Found within the URL) -->
                     <a href="#" data-videoid="UYJ5IjBRlW8" data-videosite="youtube" class="button video link-lightbox">
@@ -326,12 +331,15 @@
                         <p class="pricing-sub">Always Proffesional</p>
                         <div class="pricing">
                             <div class="price"><span>$</span>102</div>
-                            <p>Compassionately tailored cleaning for seniors and disabilities.</p>
+                            <p>Compassionately tailored cleaning for seniors and disabilities. This means:</p>
                         </div>
                         <ul>
                             <li>Specialized Care</li>
                             <li>Compassionate Cleaning</li>
-                            <li>Seniors' Support</li>
+                            <li>Surface Sanitisation</li>
+                            <li>Linen Cleaning</li>
+                            <li>Bed Making</li>
+                            <li>Dusting Fictures</li>
                         </ul>
                         <a href="#" class="button">CALL TODAY</a>
                     </div>
@@ -345,12 +353,16 @@
                         <p class="pricing-sub">The popular choice</p>
                         <div class="pricing">
                             <div class="price"><span>$</span>73</div>
-                            <p>Regular cleaning to maintain your space.</p>
+                            <p>A Proffesional and Regaulr general clean to maintain your space, This includes:</p>
                         </div>
                         <ul>
-                            <li>On Going</li>
-                            <li>Stress Free</li>
-                            <li>Proffesional</li>
+                            <li>Bathroom Deep Clean</li>
+                            <li>Surface Areas</li>
+                            <li>Kitchen Clean</li>
+                            <li>Mopping Hard Surfaces</li>
+                            <li>Vaccuming Carpets</li>
+                            <li>Revitalizing Dining Areas</li>
+
                         </ul>
                         <a href="#" class="button">CALL TODAY</a>
                     </div>
@@ -364,12 +376,15 @@
                         <p class="pricing-sub">The one off</p>
                         <div class="pricing">
                             <div class="price"><span>$</span>250</div>
-                            <p>Deep cleaning to refresh your home.</p>
+                            <p>Deep cleaning to refresh your home or workspace.</p>
                         </div>
                         <ul>
-                            <li>Deep Refresh</li>
-                            <li>Seasonal Revival</li>
-                            <li>Thorough Clean</li>
+                            <li>Bathroom Deep Clean</li>
+                            <li>Surface Areas</li>
+                            <li>Kitchen Clean</li>
+                            <li>Mopping Hard Surfaces</li>
+                            <li>Vaccuming Carpets</li>
+                            <li>Revitalizing Dining Areas</li>
                         </ul>
                         <a href="#" class="button">CALL TODAY</a>
                     </div>
