added text shadow to main desc

--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@
                             <p>A Proffesional and Regaulr general clean to maintain your space, This includes:</p>
                         </div>
                         <ul>
-                            <li>Bathroom Deep Clean</li>
+                            <li>Bathroom Clean</li>
                             <li>Surface Areas</li>
                             <li>Kitchen Clean</li>
                             <li>Mopping Hard Surfaces</li>
@@ -380,11 +380,11 @@
                         </div>
                         <ul>
                             <li>Bathroom Deep Clean</li>
-                            <li>Surface Areas</li>
-                            <li>Kitchen Clean</li>
+                            <li>Cleaning under tables</li>
+                            <li>Disinfecting</li>
                             <li>Mopping Hard Surfaces</li>
                             <li>Vaccuming Carpets</li>
-                            <li>Revitalizing Dining Areas</li>
+                            <li>Dusting</li>
                         </ul>
                         <a href="#" class="button">CALL TODAY</a>
                     </div>
