start of new price boxes

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                 </div>
 
                 <!--Call to Action-->
-                <a href="#" class="button">CALL TODAY: 0123 456 789</a>
+                <a href="tel:0422695551" class="button">CALL TODAY: 0422 695 551</a>
                 <!--End Call to Action-->
 
             </div>
@@ -324,73 +324,110 @@
                     <h2 class="section-title">We have the right package for you</h2>
                 </div>
 
-                <!--Pricing Block-->
-                <div class="pricing-block col-3 wow fadeInUp pdt" data-wow-delay="0.4s">
-                    <div class="pricing-block-content">
-                        <h3>Aged Care / Disability</h3>
-                        <p class="pricing-sub">Always Proffesional</p>
-                        <div class="pricing">
-                            <div class="price"><span>$</span>102</div>
-                            <p>Compassionately tailored cleaning for seniors and disabilities. This means:</p>
+                <div class="pricing-blocks-section">
+                    <!--Pricing Block-->
+                    <div class="pricing-block wow fadeInUp pdt1" data-wow-delay="0.4s">
+                        <div class="pricing-block-content">
+                            <!--<h3>General Clean</h3> -->
+                            <p class="pricing-sub">Always Proffesional</p>
+                            <div class="pricing">
+                                <div class="price">General Home Cleaning</div>
+                                <p class="black pdt1">All general residential cleaning services in Sydney include the following:</p>
+                            </div>
+                            <ul>
+                                <li>Specialized Care</li>
+                                <li>Compassionate Cleaning</li>
+                                <li>Surface Sanitisation</li>
+                                <li>Linen Cleaning</li>
+                                <li>Bed Making</li>
+                                <li>Dusting Fictures</li>
+                            </ul>
+                            <a href="tel:0422695551" class="button">CALL TODAY</a>
                         </div>
-                        <ul>
-                            <li>Specialized Care</li>
-                            <li>Compassionate Cleaning</li>
-                            <li>Surface Sanitisation</li>
-                            <li>Linen Cleaning</li>
-                            <li>Bed Making</li>
-                            <li>Dusting Fictures</li>
-                        </ul>
-                        <a href="#" class="button">CALL TODAY</a>
                     </div>
-                </div>
-                <!--End Pricing Block-->
+                    <!--End Pricing Block-->
 
-                <!--Pricing Block-->
-                <div class="pricing-block featured col-3 wow fadeInUp" data-wow-delay="0.6s">
-                    <div class="pricing-block-content">
-                        <h3>Weekly or Fortnightly</h3>
-                        <p class="pricing-sub">The popular choice</p>
-                        <div class="pricing">
-                            <div class="price"><span>$</span>73</div>
-                            <p>A Proffesional and Regaulr general clean to maintain your space, This includes:</p>
+                    <!--Pricing Block-->
+                    <div class="pricing-block wow fadeInUp pdt1" data-wow-delay="0.8s">
+                        <div class="pricing-block-content">
+                            <!--
+                            <h3>Move Out / Spring Clean</h3>
+                            -->
+                            <p class="pricing-sub">For All Homes</p>
+                            <div class="pricing">
+                                <div class="price">End Of Lease Clean</div>
+                                <p class="black pdt1">Deep cleaning to refresh your home or workspace.</p>
+                            </div>
+                            <div class="service-boxes" style="display: flex; flex-wrap: wrap; width: 100%; background-color: white;">
+                                <!--Icon Block-->
+                                <div class="col-2 icon-block icon-top wow fadeInUp in-price-block" data-wow-delay="0.1s">
+                                    <!--Icon-->
+                                    <div class="icon">
+                                        <i class="fa fa-bed fa-3x"></i>
+                                    </div>
+                                    <!--Icon Block Description-->
+                                    <div class="icon-block-description">
+                                        <h4>Bedroom and living areas</h4>
+                                        <p>Dust & wipe down; furniture & electronics.</p>
+                                    </div>
+                                </div>
+                                <!--End of Icon Block-->
+                                <!--Icon Block-->
+                                <div class="col-2 icon-block icon-top wow fadeInUp in-price-block" data-wow-delay="0.1s">
+                                    <!--Icon-->
+                                    <div class="icon">
+                                        <i class="fa fa-glass fa-3x"></i>
+                                    </div>
+                                    <!--Icon Block Description-->
+                                    <div class="icon-block-description">
+                                        <h4>Kitchen</h4>
+                                        <p>Sanitise surface areas and clean; Stove, Benchtop & Sinks.</p>
+                                    </div>
+                                </div>
+                                <!--End of Icon Block-->
+                                <!--Icon Block-->
+                                <div class="col-2 icon-block icon-top wow fadeInUp in-price-block" data-wow-delay="0.1s">
+                                    <!--Icon-->
+                                    <div class="icon">
+                                        <i class="fa fa-bathtub fa-3x"></i>
+                                    </div>
+                                    <!--Icon Block Description-->
+                                    <div class="icon-block-description">
+                                        <h4>Bathroom and laundry</h4>
+                                        <p>Bath, shower + screen, toilets, sinks, mirrors, cabinet exteriors & floor.</p>
+                                    </div>
+                                </div>
+                                <!--End of Icon Block-->
+                                <!--Icon Block-->
+                                <div class="col-2 icon-block icon-top wow fadeInUp in-price-block" data-wow-delay="0.1s">
+                                    <!--Icon-->
+                                    <div class="icon">
+                                        <i class="fa fa-window-minimize fa-3x"></i>
+                                    </div>
+                                    <!--Icon Block Description-->
+                                    <div class="icon-block-description">
+                                        <h4>Floors</h4>
+                                        <p>All floor spaces vacuumed and moped.</p>
+                                    </div>
+                                </div>
+                                <!--End of Icon Block-->
+                            </div>
+                            <div class="pricing">
+                                <div class="pricing-sub" style="color: #999; margin-bottom: 0px;"><b>Optional Extras</b> - Add extras and customise your cleaning service to meet your needs.</div>
+                            </div>
+                            <ul>
+                                <li>Bathroom Deep Clean</li>
+                                <li>Cleaning under tables</li>
+                                <li>Disinfecting</li>
+                                <li>Mopping Hard Surfaces</li>
+                                <li>Vaccuming Carpets</li>
+                                <li>Dusting</li>
+                            </ul>
+                            <a href="tel:0422695551" class="button">CALL TODAY</a>
                         </div>
-                        <ul>
-                            <li>Bathroom Clean</li>
-                            <li>Surface Areas</li>
-                            <li>Kitchen Clean</li>
-                            <li>Mopping Hard Surfaces</li>
-                            <li>Vaccuming Carpets</li>
-                            <li>Revitalizing Dining Areas</li>
-
-                        </ul>
-                        <a href="#" class="button">CALL TODAY</a>
                     </div>
+                    <!--End Pricing Block-->
                 </div>
-                <!--End Pricing Block-->
-
-                <!--Pricing Block-->
-                <div class="pricing-block col-3 wow fadeInUp pdt" data-wow-delay="0.8s">
-                    <div class="pricing-block-content">
-                        <h3>Move Out / Spring Clean</h3>
-                        <p class="pricing-sub">The one off</p>
-                        <div class="pricing">
-                            <div class="price"><span>$</span>250</div>
-                            <p>Deep cleaning to refresh your home or workspace.</p>
-                        </div>
-                        <ul>
-                            <li>Bathroom Deep Clean</li>
-                            <li>Cleaning under tables</li>
-                            <li>Disinfecting</li>
-                            <li>Mopping Hard Surfaces</li>
-                            <li>Vaccuming Carpets</li>
-                            <li>Dusting</li>
-                        </ul>
-                        <a href="#" class="button">CALL TODAY</a>
-                    </div>
-                </div>
-                <!--End Pricing Block-->
-
             </div>
         </section>
         <!--End of Pricing Tables-->
