added CTA to navbar

--- a/index.html
+++ b/index.html
@@ -74,9 +74,8 @@
                     <!--End of Logo-->
 
                     <aside class="navbar-aside">
-                        <p><b>Trading Hours:</b></p>
-                        <p>Mon-Fri
-                            8:30am - 5:00pm</p>
+                        <a href="tel:0422695551"><p><b>CALL FOR A QUOTE</b></p></a>
+                        <p>Mon-Fri 8:30am - 5:00pm</p>
                         <!--Social Icons in Header
                         <ul class="social-icons">
                             <li>
